--- a/admin-pdp-epp/pom.xml
+++ b/admin-pdp-epp/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>admin-pdp-epp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <main.class>gov.nist.csd.pm.server.admin.AdminPDPEPPServer</main.class>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>gov.nist.csd.pm</groupId>
@@ -19,4 +23,17 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
