--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -3,28 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>resource-pdp</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <parent>
         <groupId>gov.nist.csd.pm</groupId>
         <artifactId>server</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <artifactId>e2e</artifactId>
+
     <properties>
-        <main.class>gov.nist.csd.pm.server.resource.ResourcePDPServer</main.class>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>gov.nist.csd.pm</groupId>
-            <artifactId>shared</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-
-    </build>
 </project>
