--- a/src/resource-pdp/Dockerfile
+++ b/src/resource-pdp/Dockerfile
@@ -1,5 +1,9 @@
 FROM eclipse-temurin:21-jdk-alpine
 
+# create volume plugins
+CMD mkdir /plugins
+VOLUME /plugins
+
 WORKDIR /app
 COPY /target/resource-pdp-1.0-SNAPSHOT.jar /app/resource-pdp-1.0-SNAPSHOT.jar
 EXPOSE ${RESOURCE_GRPC_SERVER_PORT}
