--- a/k8s/eventstore.yaml
+++ b/k8s/eventstore.yaml
@@ -1,3 +1,28 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: eventstore-pvc-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: eventstore-pvc-logs
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -48,6 +73,7 @@ spec:
           persistentVolumeClaim:
             claimName: eventstore-pvc-logs
 ---
+
 kind: Service
 apiVersion: v1
 metadata:
