--- a/src/pom.xml
+++ b/src/pom.xml
@@ -10,7 +10,6 @@
         <module>shared</module>
         <module>admin-pdp-epp</module>
         <module>resource-pdp</module>
-        <module>e2e</module>
     </modules>
 
     <properties>
@@ -33,11 +32,16 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.usnistgov</groupId>
-            <artifactId>policy-machine-core</artifactId>
-            <version>68b06d3</version>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-services</artifactId>
+            <version>1.61.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.usnistgov</groupId>
+            <artifactId>policy-machine-core</artifactId>
+            <version>b1cd995</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -72,6 +76,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.5.2</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>**/Log4j2Plugins.dat</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
