--- a/src/resource-pdp/pom.xml
+++ b/src/resource-pdp/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>gov.nist.csd.pm.server</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <artifactId>resource-pdp</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <parent>
-        <groupId>gov.nist.csd.pm</groupId>
-        <artifactId>server</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <properties>
         <main.class>gov.nist.csd.pm.server.resource.ResourcePDPServer</main.class>
@@ -18,7 +18,30 @@
 
     <dependencies>
         <dependency>
-            <groupId>gov.nist.csd.pm</groupId>
+            <groupId>com.github.usnistgov</groupId>
+            <artifactId>policy-machine-core</artifactId>
+            <exclusions>
+                <!-- Exclude all Neo4j dependencies -->
+                <exclusion>
+                    <groupId>org.neo4j</groupId>
+                    <artifactId>neo4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.neo4j.driver</groupId>
+                    <artifactId>neo4j-java-driver</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.eventstore</groupId>
+            <artifactId>db-client-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>gov.nist.csd.pm.server</groupId>
             <artifactId>shared</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
