--- a/src/pom.xml
+++ b/src/pom.xml
@@ -13,13 +13,13 @@
         <module>shared-test</module>
         <module>admin-pdp-epp</module>
         <module>resource-pdp</module>
-        <module>it</module>
     </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <spring-boot.version>3.2.4</spring-boot.version>
+        <protobuf.version>3.2.4</protobuf.version>
     </properties>
 
     <repositories>
@@ -49,6 +49,11 @@
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.retry</groupId>
                 <artifactId>spring-retry</artifactId>
                 <version>2.0.11</version>
@@ -58,36 +63,28 @@
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>com.eventstore</groupId>
-                <artifactId>db-client-java</artifactId>
-                <version>5.4.3</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.usnistgov</groupId>
-                <artifactId>policy-machine-core</artifactId>
-                <version>9aa9495</version>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-bom</artifactId>
+                <version>1.71.0</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
-                <version>3.25.5</version>
+                <version>4.28.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.eventstore</groupId>
+                <artifactId>db-client-java</artifactId>
+                <version>5.4.5</version>
             </dependency>
             <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-services</artifactId>
-                <version>1.61.1</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-protobuf</artifactId>
-                <version>1.61.1</version>
-            </dependency>
-            <dependency>
-                <groupId>io.grpc</groupId>
-                <artifactId>grpc-stub</artifactId>
-                <version>1.61.1</version>
+                <groupId>com.github.usnistgov</groupId>
+                <artifactId>policy-machine-core</artifactId>
+                <version>a48bebd</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
