--- a/src/resource-pdp/pom.xml
+++ b/src/resource-pdp/pom.xml
@@ -13,13 +13,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <main.class>gov.nist.csd.pm.server.resource.ResourcePDPServer</main.class>
+        <main.class>gov.nist.csd.pm.server.resource.ResourcePDPApplication</main.class>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.github.usnistgov</groupId>
-            <artifactId>policy-machine-core</artifactId>
+            <groupId>gov.nist.csd.pm.server</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <!-- Exclude all Neo4j dependencies -->
                 <exclusion>
@@ -37,13 +38,10 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.eventstore</groupId>
-            <artifactId>db-client-java</artifactId>
-        </dependency>
-        <dependency>
             <groupId>gov.nist.csd.pm.server</groupId>
-            <artifactId>shared</artifactId>
+            <artifactId>shared-test</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
