--- a/src/resource-pdp/src/main/resources/application.yaml
+++ b/src/resource-pdp/src/main/resources/application.yaml
@@ -3,14 +3,16 @@ grpc:
     port: 50051
 pm:
   pdp:
-    resource-host: localhost
-    resource-port: 50051
-    admin-host: localhost
-    admin-port: 50052
-    esdb-host: localhost
-    esdb-port: 2113
-    esdb-stream: pm-events-v1
-    esdb-consumer-group: resource-pdp
+    resource:
+      hostname: localhost
+      port: 50051
+      admin-hostname: localhost
+      admin-port: 50052
+    esdb:
+      hostname: localhost
+      port: 2113
+      event-stream: pm-events-v1
+      snapshot-stream: pm-snapshot-v1
 
 management:
   health:
