--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,9 +13,6 @@ services:
     ports:
       - "2113:2113"
       - "1113:1113"
-    volumes:
-      - ./eventstore-data:/var/lib/eventstore
-      - ./eventstore-logs:/var/log/eventstore
     restart: unless-stopped
     networks:
       - pm_pdp
@@ -26,13 +23,13 @@ services:
       dockerfile: Dockerfile
     environment:
       - GRPC_SERVER_PORT=50052
-      - PM_PDP_ADMIN_BOOTSTRAP_FILE_PATH=./src/admin-pdp-epp/src/main/resources/bootstrap.pml
+      - PM_PDP_ADMIN_BOOTSTRAP_FILE_PATH=/config/bootstrap.json
       - PM_PDP_ADMIN_BOOTSTRAP_USER=u1
       - PM_PDP_ADMIN_NEO4J_DB_PATH=/tmp/neo4j
       - PM_PDP_ADMIN_ESDB_CONSUMER_GROUP=admin-pdp-epp-cg
       - PM_PDP_ADMIN_SNAPSHOT_INTERVAL=1000
       - PM_PDP_ADMIN_SHUTDOWN_AFTER_BOOTSTRAP=false
-      - PM_PDP_ESDB_HOSTNAME=localhost
+      - PM_PDP_ESDB_HOSTNAME=eventstore
       - PM_PDP_ESDB_PORT=2113
       - PM_PDP_ESDB_EVENT_STREAM=pm-events-v1
       - PM_PDP_ESDB_SNAPSHOT_STREAM=pm-snapshot-v1
@@ -50,7 +47,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - GRPC_SERVER_PORT=50051
-      - PM_PDP_RESOURCE_ADMIN_HOSTNAME=localhost
+      - PM_PDP_RESOURCE_ADMIN_HOSTNAME=admin-pdp-epp
       - PM_PDP_RESOURCE_ADMIN_PORT=50052
       - PM_PDP_ESDB_HOSTNAME=eventstore
       - PM_PDP_ESDB_PORT=2113
@@ -61,10 +58,6 @@ services:
     restart: unless-stopped
     networks:
       - pm_pdp
-
-volumes:
-  eventstore-data:
-  eventstore-logs:
 
 networks:
   pm_pdp:
