--- a/src/pom.xml
+++ b/src/pom.xml
@@ -106,6 +106,17 @@
                 <artifactId>resilience4j-retry</artifactId>
                 <version>2.1.0</version>
             </dependency>
+            <!-- PF4j Plugin Framework -->
+            <dependency>
+                <groupId>org.pf4j</groupId>
+                <artifactId>pf4j</artifactId>
+                <version>3.10.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.pf4j</groupId>
+                <artifactId>pf4j-spring</artifactId>
+                <version>0.8.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
