--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,9 +18,7 @@ services:
       - pm_pdp
 
   admin-pdp-epp:
-    build:
-      context: ../src/admin-pdp-epp
-      dockerfile: Dockerfile
+    image: csd773/pm-admin-pdp-epp
     environment:
       - GRPC_SERVER_PORT=50052
       - PM_PDP_ADMIN_BOOTSTRAP_FILE_PATH=/config/bootstrap.json
@@ -42,9 +40,7 @@ services:
       - pm_pdp
 
   resource-pdp:
-    build:
-      context: ../src/resource-pdp
-      dockerfile: Dockerfile
+    image: csd773/pm-resource-pdp
     environment:
       - GRPC_SERVER_PORT=50051
       - PM_PDP_RESOURCE_ADMIN_HOSTNAME=admin-pdp-epp
@@ -53,6 +49,7 @@ services:
       - PM_PDP_ESDB_PORT=2113
       - PM_PDP_ESDB_EVENT_STREAM=pm-events-v1
       - PM_PDP_ESDB_SNAPSHOT_STREAM=pm-snapshot-v1
+      - PM_PDP_RESOURCE_EPP_MODE=DISABLED
     ports:
       - "50051:50051"
     restart: unless-stopped
