--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - pm_pdp
 
   admin-pdp-epp:
-    image: csd773/pm-admin-pdp-epp
+    image: csd773/pm-admin-pdp-epp:latest
     environment:
       - GRPC_SERVER_PORT=50052
       - PM_PDP_ADMIN_BOOTSTRAP_FILE_PATH=/config/bootstrap.json
@@ -40,7 +40,7 @@ services:
       - pm_pdp
 
   resource-pdp:
-    image: csd773/pm-resource-pdp
+    image: csd773/pm-resource-pdp:latest
     environment:
       - GRPC_SERVER_PORT=50051
       - PM_PDP_RESOURCE_ADMIN_HOSTNAME=admin-pdp-epp
@@ -49,7 +49,7 @@ services:
       - PM_PDP_ESDB_PORT=2113
       - PM_PDP_ESDB_EVENT_STREAM=pm-events-v1
       - PM_PDP_ESDB_SNAPSHOT_STREAM=pm-snapshot-v1
-      - PM_PDP_RESOURCE_EPP_MODE=DISABLED
+      - PM_PDP_RESOURCE_EPP_MODE=SYNC
     ports:
       - "50051:50051"
     restart: unless-stopped
