fix errors from updating protos and core

--- a/src/shared/pom.xml
+++ b/src/shared/pom.xml
@@ -87,6 +87,10 @@
                 <version>0.6.1</version>
                 <configuration>
                     <pluginId>grpc-java</pluginId>
+                    <protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
+                    <includes>
+                        <include>**/*.proto</include>
+                    </includes>
                     <protocArtifact>
                         com.google.protobuf:protoc:4.28.2:exe:${os.detected.classifier}
                     </protocArtifact>
