--- a/src/shared/pom.xml
+++ b/src/shared/pom.xml
@@ -44,6 +44,12 @@
         <dependency>
             <groupId>com.github.usnistgov</groupId>
             <artifactId>policy-machine-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.neo4j.driver</groupId>
+                    <artifactId>neo4j-java-driver</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -87,6 +93,10 @@
                 <version>0.6.1</version>
                 <configuration>
                     <pluginId>grpc-java</pluginId>
+                    <protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
+                    <includes>
+                        <include>**/*.proto</include>
+                    </includes>
                     <protocArtifact>
                         com.google.protobuf:protoc:4.28.2:exe:${os.detected.classifier}
                     </protocArtifact>
