--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -62,7 +62,9 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ matrix.image.name }}
           tags: |
-            type=semver,pattern={{version}},value=${{ github.ref_name }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
             type=raw,value=latest
 
       - name: Build and push ${{ matrix.image.name }}
