update dockerfiles to use jre instead of jdk

--- a/src/resource-pdp/Dockerfile
+++ b/src/resource-pdp/Dockerfile
@@ -1,7 +1,7 @@
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:21-jre-alpine
 
 # create volume plugins
-CMD mkdir /plugins
+RUN mkdir -p /plugins
 VOLUME /plugins
 
 WORKDIR /app
