--- a/src/admin-pdp-epp/Dockerfile
+++ b/src/admin-pdp-epp/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:21-jre-alpine
 
 WORKDIR /app
 COPY /target/admin-pdp-epp-1.0-SNAPSHOT.jar /app/admin-pdp-epp-1.0-SNAPSHOT.jar
